Fix varie e dark mode

--- a/src/assets/home.scss
+++ b/src/assets/home.scss
@@ -1,3 +1,6 @@
+.playlistModalContainer {
+  max-width: 55rem !important;
+}
 .playlistCard {
   display: flex;
   align-items: center;
